Enum "account_type" {
  "checking"
  "savings"
  "wallet"
  "investment"
}

Enum "currency" {
  "BRL"
  "USD"
  "EUR"
}

Enum "investment_type" {
  "renda_fixa"
  "renda_variavel"
  "tesouro_direto"
}

Enum "index_type" {
  "CDI"
  "IPCA"
  "SELIC"
  "FIXED"
}

Enum "liquidity_type" {
  "daily"
  "monthly"
  "at_maturity"
}

Enum "invoice_status" {
  "open"
  "paid"
  "overdue"
}

Enum "transaction_frequency" {
  "daily"
  "weekly"
  "biweekly"
  "monthly"
  "bimonthly"
  "quarterly"
  "yearly"
}

Enum "transaction_status" {
  "paid"
  "pending"
  "ignore"
}

Enum "sync_type" {
  "incomes"
  "expenses"
  "card_expenses"
  "card_chargebacks"
  "card_payments"
  "transfers"
  "recurring_transactions"
  "investment_deposit"
  "investment_withdrawal"
  "investments"
}

Enum "integration_source" {
  "mobills"
}

Table "external_sync" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "id_local" UUID [not null]
  "id_mobills" UUID [not null]
  "sync_type" sync_type [not null]
  "source" integration_source [not null]
  "created_at" timestamp [default: `now()`]

Indexes {
  id_local [name: "idx_external_sync_id_local"]
}
}

Table "users" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "name" VARCHAR(100) [not null]
  "username" VARCHAR(100) [unique, not null]
  "email" VARCHAR(100) [unique, not null]
  "is_active" BOOLEAN [not null, default: true]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "accounts" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "user_id" UUID [not null]
  "name" VARCHAR(100) [unique, not null]
  "type" account_type [not null]
  "initial_balance" NUMERIC(15, 2) [not null]
  "currency" currency [not null]
  "is_active" BOOLEAN [not null, default: true]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  user_id [name: "idx_accounts_user_id"]
}
}

Table "categories" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "name" VARCHAR(100) [unique, not null]
  "color" VARCHAR(100) [not null]
  "icon" VARCHAR(100) [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "sub_categories" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "name" VARCHAR(100) [not null]
  "category_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
  Indexes {
    (name, category_id) [unique]
  }
}

Table "cards" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "name" VARCHAR(100) [unique, not null]
  "credit_limit" NUMERIC(15, 2) [not null]
  "account_id" UUID [not null]
  "closing_date" INTEGER [not null]
  "due_date" INTEGER [not null]
  "is_active" BOOLEAN [not null, default: true]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "invoices" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "card_id" UUID [not null]
  "billing_month" DATE [not null]
  "status" invoice_status [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  (card_id, billing_month) [unique]
}
}

Table "transfers" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "recurring_transfer_id" UUID
  "transfer_date" DATE [not null]
  "amount" NUMERIC(15, 2) [not null]
  "source_account_id" UUID [not null]
  "destination_account_id" UUID [not null]
  "transaction_status" transaction_status [not null, default: "pending"]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  source_account_id [name: "idx_transfers_source_account_id"]
  destination_account_id [name: "idx_transfers_destination_account_id"]
}
}

Table "recurring_transfers" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "amount" NUMERIC(15, 2) [not null]
  "source_account_id" UUID [not null]
  "destination_account_id" UUID [not null]
  "frequency" transaction_frequency [not null]
  "start_date" DATE [not null]
  "end_date" DATE
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  source_account_id [name: "idx_recurring_transactions_source_account_id"]
  destination_account_id [name: "idx_recurring_transactions_destination_account_id"]
}
}

Table "recurring_transactions" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "amount" NUMERIC(15, 2) [not null]
  "description" VARCHAR(50) [not null]
  "frequency" transaction_frequency [not null]
  "start_date" DATE [not null]
  "end_date" DATE
  "account_id" UUID [not null]
  "category_id" UUID [not null]
  "subcategory_id" UUID
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  account_id [name: "idx_recurring_transactions_account_id"]
  category_id [name: "idx_recurring_transactions_category_id"]
  subcategory_id [name: "idx_recurring_transactions_subcategory_id"]
}
}

Table "investments" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "asset_name" VARCHAR(100) [not null]
  "type" investment_type [not null]
  "account_id" UUID [not null]
  "index_type" index_type
  "index_value" VARCHAR(50)
  "liquidity" liquidity_type
  "is_rescued" BOOLEAN
  "validity" DATE
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  account_id [name: "idx_investments_account_id"]
}
}

Table "tags" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "name" VARCHAR(100) [not null]
  "color" VARCHAR(20)
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "recurring_transactions_tags" {
  "recurring_transaction_id" UUID [not null]
  "tag_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "incomes" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "description" TEXT
  "amount" NUMERIC(15, 2) [not null]
  "account_id" UUID [not null]
  "recurring_transaction_id" UUID
  "category_id" UUID [not null]
  "subcategory_id" UUID
  "transaction_status" transaction_status [not null, default: "pending"]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  account_id [name: "idx_incomes_account_id"]
  recurring_transaction_id [name: "idx_incomes_recurring_transaction_id"]
  category_id [name: "idx_incomes_category_id"]
  subcategory_id [name: "idx_incomes_subcategory_id"]
}
}

Table "expenses" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "description" TEXT
  "amount" NUMERIC(15, 2) [not null]
  "account_id" UUID [not null]
  "category_id" UUID [not null]
  "subcategory_id" UUID
  "transaction_status" transaction_status [not null, default: "pending"]
  "recurring_transaction_id" UUID
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  account_id [name: "idx_expenses_account_id"]
  recurring_transaction_id [name: "idx_expenses_recurring_transaction_id"]
  category_id [name: "idx_expenses_category_id"]
  subcategory_id [name: "idx_expenses_subcategory_id"]
}
}

Table "card_expenses" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "description" TEXT
  "amount" NUMERIC(15, 2) [not null]
  "subcategory_id" UUID
  "category_id" UUID
  "recurring_transaction_id" UUID
  "invoice_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  invoice_id [name: "idx_card_expenses_invoice_id"]
  category_id [name: "idx_card_expenses_category_id"]
  subcategory_id [name: "idx_card_expenses_subcategory_id"]
}
}

Table "card_chargebacks" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "description" TEXT
  "amount" NUMERIC(15, 2) [not null]
  "invoice_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  invoice_id [name: "idx_card_chargebacks_invoice_id"]
}
}

Table "card_payments" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "amount" NUMERIC(15, 2) [not null]
  "account_id" UUID [not null]
  "invoice_id" UUID [not null]
  "is_final_payment" BOOLEAN [not null, default: false]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  account_id [name: "idx_card_payments_account_id"]
  invoice_id [name: "idx_card_payments_invoice_id"]
}
}

Table "investment_deposit" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "description" TEXT
  "amount" NUMERIC(15, 2) [not null]
  "recurring_transaction_id" UUID
  "investment_id" UUID
  "account_id" UUID [not null]
  "transaction_status" transaction_status [not null, default: "pending"]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  investment_id [name: "idx_investment_deposit_investment_id"]
  account_id [name: "idx_investment_deposit_account_id"]
  recurring_transaction_id [name: "idx_investment_deposit_recurring_transaction_id"]
}
}

Table "investment_withdrawal" {
  "id" UUID [pk, default: `uuid_generate_v4()`]
  "transaction_date" DATE [not null]
  "description" TEXT
  "amount" NUMERIC(15, 2) [not null]
  "recurring_transaction_id" UUID
  "investment_id" UUID
  "account_id" UUID [not null]
  "transaction_status" transaction_status [not null, default: "pending"]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]

Indexes {
  investment_id [name: "idx_investment_withdrawal_investment_id"]
  account_id [name: "idx_investment_withdrawal_account_id"]
  recurring_transaction_id [name: "idx_investment_withdrawal_recurring_transaction_id"]
}
}

Table "incomes_tags" {
  "income_id" UUID [not null]
  "tag_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "expenses_tags" {
  "expense_id" UUID [not null]
  "tag_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "investments_tags" {
  "investment_id" UUID [not null]
  "tag_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Table "card_expense_tags" {
  "card_expense_id" UUID [not null]
  "tag_id" UUID [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
}

Ref:"recurring_transfers"."id" < "transfers"."recurring_transfer_id" [delete: set null]

Ref:"accounts"."id" < "recurring_transfers"."source_account_id" [delete: cascade]

Ref:"accounts"."id" < "recurring_transfers"."destination_account_id" [delete: cascade]

Ref:"recurring_transactions"."id" < "card_expenses"."recurring_transaction_id" [delete: set null]

Ref:"recurring_transactions"."id" < "expenses"."recurring_transaction_id" [delete: set null]

Ref:"recurring_transactions"."id" < "incomes"."recurring_transaction_id" [delete: set null]

Ref:"recurring_transactions"."id" < "recurring_transactions_tags"."recurring_transaction_id" [delete: set null]

Ref:"tags"."id" < "recurring_transactions_tags"."tag_id" [delete: set null]

Ref:"incomes"."id" < "incomes_tags"."income_id" [delete: cascade]

Ref:"tags"."id" < "incomes_tags"."tag_id" [delete: set null]

Ref:"expenses"."id" < "expenses_tags"."expense_id" [delete: cascade]

Ref:"tags"."id" < "expenses_tags"."tag_id" [delete: set null]

Ref:"investments"."id" < "investments_tags"."investment_id" [delete: set null]

Ref:"tags"."id" < "investments_tags"."tag_id" [delete: set null]

Ref:"card_expenses"."id" < "card_expense_tags"."card_expense_id" [delete: set null]

Ref:"tags"."id" < "card_expense_tags"."tag_id" [delete: set null]

Ref:"users"."id" < "accounts"."user_id" [delete: cascade]

Ref:"accounts"."id" < "cards"."account_id" [delete: cascade]

Ref:"accounts"."id" < "investments"."account_id" [delete: cascade]

Ref:"accounts"."id" < "investment_deposit"."account_id" [delete: cascade]

Ref:"accounts"."id" < "investment_withdrawal"."account_id" [delete: cascade]

Ref:"accounts"."id" < "recurring_transactions"."account_id" [delete: cascade]

Ref:"accounts"."id" < "transfers"."source_account_id" [delete: cascade]

Ref:"accounts"."id" < "transfers"."destination_account_id" [delete: cascade]

Ref:"accounts"."id" < "incomes"."account_id" [delete: cascade]

Ref:"accounts"."id" < "expenses"."account_id" [delete: cascade]

Ref:"accounts"."id" < "card_payments"."account_id" [delete: cascade]

Ref:"invoices"."id" < "card_expenses"."invoice_id" [delete: cascade]

Ref:"invoices"."id" < "card_chargebacks"."invoice_id" [delete: cascade]

Ref:"invoices"."id" < "card_payments"."invoice_id" [delete: cascade]

Ref:"investments"."id" < "investment_deposit"."investment_id" [delete: cascade]

Ref:"investments"."id" < "investment_withdrawal"."investment_id" [delete: cascade]

Ref:"categories"."id" < "sub_categories"."category_id" [delete: cascade]

Ref:"categories"."id" < "incomes"."category_id" [delete: restrict]

Ref:"sub_categories"."id" < "incomes"."subcategory_id" [delete: set null]

Ref:"categories"."id" < "expenses"."category_id" [delete: restrict]

Ref:"sub_categories"."id" < "expenses"."subcategory_id" [delete: set null]

Ref:"categories"."id" < "recurring_transactions"."category_id" [delete: restrict]

Ref:"sub_categories"."id" < "recurring_transactions"."subcategory_id" [delete: set null]